# ChangeLog for sys-libs/libselinux
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/libselinux/ChangeLog,v 1.55 2007/06/04 00:39:44 pebenito Exp $

  04 Jun 2007; Chris PeBenito <pebenito@gentoo.org>
  libselinux-1.34.0.ebuild:
  Mark stable.

  16 Feb 2007; Stephen Bennett <spb@gentoo.org> libselinux-1.34.0.ebuild:
  Add missing swig depend. Bug #167007

*libselinux-1.34.0 (15 Feb 2007)

  15 Feb 2007; Chris PeBenito <pebenito@gentoo.org>
  +libselinux-1.34.0.ebuild:
  New upstream release.

  23 Oct 2006; Chris PeBenito <pebenito@gentoo.org>
  libselinux-1.30.29.ebuild:
  Fix depend for glibc

  09 Oct 2006; Chris PeBenito <pebenito@gentoo.org>
  libselinux-1.30.29.ebuild:
  Stable to make repoman happy.

*libselinux-1.30.29 (05 Oct 2006)

  05 Oct 2006; Chris PeBenito <pebenito@gentoo.org>
  +libselinux-1.30.29.ebuild:
  Add SVN snapshot.

  31 Jul 2006; Chris PeBenito <pebenito@gentoo.org> libselinux-1.30.ebuild:
  Mark stable, long overdue.

  07 Apr 2006; Chris PeBenito <pebenito@gentoo.org> libselinux-1.30.ebuild:
  Split python wrapper compile into a separate emake to ensure the main
  library is built before trying to build the wrapper. Fixes bug #129074.

  22 Mar 2006; Chris PeBenito <pebenito@gentoo.org> -libselinux-1.24.ebuild,
  -libselinux-1.28.ebuild, libselinux-1.28-r1.ebuild:
  Mark 1.28-r1 stable, clean out old ebuilds.

*libselinux-1.30 (18 Mar 2006)

  18 Mar 2006; Chris PeBenito <pebenito@gentoo.org> +libselinux-1.30.ebuild:
  New upstream release.

  22 Feb 2006; Stephen Bennett <spb@gentoo.org> libselinux-1.28.ebuild:
  Alpha stable

*libselinux-1.28-r1 (20 Feb 2006)

  20 Feb 2006; Chris PeBenito <pebenito@gentoo.org> +files/compat.py,
  +libselinux-1.28-r1.ebuild:
  Add python-selinux compatability aliases to swig wrapper.

  19 Feb 2006; Joshua Kinard <kumba@gentoo.org> libselinux-1.28.ebuild:
  Marked stable on mips.
