@@ -1,6 +1,12 @@
 # ChangeLog for sys-libs/libselinux
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/libselinux/ChangeLog,v 1.55 2007/06/04 00:39:44 pebenito Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/libselinux/ChangeLog,v 1.56 2007/10/18 19:17:25 pebenito Exp $
+
+*libselinux-1.34.13 (18 Oct 2007)
+
+  18 Oct 2007; Chris PeBenito <pebenito@gentoo.org>
+  +libselinux-1.34.13.ebuild:
+  New upstream release.
 
   04 Jun 2007; Chris PeBenito <pebenito@gentoo.org>
   libselinux-1.34.0.ebuild:
